src/tests/snapshots/molt__tests__syntax_error3.snap
---
source: src/tests/mod.rs
expression: "emit_diagnostic_str(& input, make_error_diagnostic(& err))"
---
error: Expected `;`.
  ┌─ "test_data/molt_grammar/syntax_error3.molt":1:35
  │
1 │ let field: Field = pub $ident: Lit,
  │                                   ^ Expected `;`.
